# neon-2048

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
public/: manifest.webmanifest  sw.js
scripts/: gen_icon.py  gen_pwa_icons.py
src/: input.test.ts  input.ts  main.ts  pwa.ts  storage.test.ts  storage.ts  styles.css  themes.test.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/engine/: game.test.ts  game.ts  rng.ts  types.ts
src/render/: easing.ts  palette.ts  renderer.ts  sprite-cache.ts
