[package]
name = "neon-2048"
version = "1.0.0"
description = "Neon 2048 — high-performance native build"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "neon_2048_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
